--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   "devDependencies": {},
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "ng build  --aot --prod"
+  },
+  "engines": {  
+    "node": "12.16.1",  
+    "npm": "6.13.4"  
   },
   "keywords": [],
   "author": "",
