--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "devDependencies": {},
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js",
-    "postinstall": "ng build  --aot --prod"
+    "start": "node app.js"
   },
   "engines": {  
     "node": "12.16.1",  
